--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,55 +56,11 @@
 							</div>
 						</ul>
 						<div class="col-lg-9 col-md-8 content-page">
-							<table class="table musique ctn-musique table-profil">
-								<thead>
-									<tr class="disabled-tr">
-										<th class="index-th">#</th>
-										<th class="favoris-th"></th>
-										<th class="action-music"></th>
-										<th>Titre</th>
-										<th>Artiste</th>
-										<th>Genre</th>
-										<th>Année</th>
-										<th class="last-th">Actions</th>
-									</tr>
-									<tbody>
-										<% @user.songs.each_with_index do |song, key| %>
-
-										<% if !song.private || song.user == current_user %>
-										<tr>
-											<th><%= key + 1 %></th>
-											<th><% if FavoriteSong.exists?(user_id: current_user, song_id: song.id)%>
-												<%= link_to image_tag('like_red.png'), '#', class: "action-zik favorite", data: {:song => song.id} %>
-												<% else %>
-												<%= link_to image_tag('like.png'), '#', class: "action-zik favorite", data: {:song => song.id} %>
-												<% end %></th>
-											<th class="th-music">
-												<%= image_tag('play-button.png', class: "play-music", :data => { :music => song.file.url, :index => key }) %>
-											</th>
-											
-											<th><%= link_to "#{song.title}", song_path(song) %></th>
-											
-											<th><%= "#{song.artist}" %></th>
-											<th><%= "#{song.genre}" %></th>
-											<th><%= song.year %></th>
-
-											<th class="th-action">
-												<a data-song="<%= song.id %>" data-toggle="modal" data-target="#exampleModalLong" class="action-zik"><%= image_tag('playlist.png') %></a>
-												<a href="<%= song.file.url %>" class="action-zik" download><%= image_tag('download-arrow.png') %></a>
-												
-												<%= link_to image_tag('new-file.png'), edit_song_path(song) ,class: "action-zik" %>
-												<% if song.user == current_user %>
-												<%= link_to image_tag('delete-button.png'), song, class: "action-zik", method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cette musique ?' } %>
-												<% end %>
-											</th>
-										</tr>	
-										<% end %>	
-										<% end %>
-									<!-- each -->
-									</tbody>
-								</thead>
-							</table>
+							<% unless @user.songs.empty? %>
+								<%= render partial: "shared/songs_list", locals: {songs: @user.songs, playlist: false} %>
+							<% else %>
+								<%= @user.username %> n'a pas encore ajouté de musiques.
+							<% end %>
 							<table class="table partage ctn-partage table-profil" style="display:none;">
 								<thead>
 									<tr class="disabled-tr">
