--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -84,43 +84,9 @@
 					<table class="table musique">
 						<thead>
 							<% unless @playlist.songs.empty? %>
-
-							<tr class="disabled-tr">
-								<th>#</th>
-								<th class="action-music"></th>
-								<th>Titre</th>
-								<th>Artiste</th>
-								<th>Genre</th>
-								<th>Année</th>
-								<th class="last-th">Actions</th>
-							</tr>
-							<tbody>
-								<% @playlist.songs.each_with_index do |song, key| %>
-								<tr>
-									<th><%= key + 1 %></th>
-									<th class="th-music">
-										<%= image_tag('play-button.png', class: "play-music", :data => { :music => song.file.url, :index => key }) %>
-									</th>
-									<th class="song" data-url="<%= song.file.url %>">
-										<%= link_to song.title, song_path(song) %>
-									</th>
-									<th><%= song.artist %></th>
-									<th><%= song.genre %></th>
-									<th><%= song.year %></th>
-									<th class="th-action">
-										<!-- <a data-toggle="modal" data-target="#exampleModalLong" class="action-zik"><%= image_tag('playlist.png') %></a> -->
-										<a href="<%= song.file.url %>" class="action-zik" download><%= image_tag('download-arrow.png') %></a>
-										<%= link_to image_tag('new-file.png'), edit_song_path(song) ,class: "action-zik" %>
-										<% if owner?(@playlist) %>
-										<%= link_to raw(image_tag('delete-button.png')), { action: "remove", song_id: song.id, playlist_id: @playlist.id }, class: "action-zik", data: { confirm: "Êtes-vous certain de vouloir supprimer #{song.title} de cette playlist ?" } %>
-										<% end %>
-									</th>
-								</tr>		
-								<% end %>
-								<!-- each -->
-							</tbody>
+								<%= render partial: "shared/songs_list", locals: {songs: @playlist.songs, playlist: true} %>
 							<% else %>
-							Aucune chanson n'a été ajouté à cette playlist. 
+								Aucune chanson n'a été ajouté à cette playlist.
 							<% end %>
 						</thead>
 					</table>
