--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -52,47 +52,7 @@
               </div>
             </ul>
             <div class="col-lg-9 col-md-8 content-page">
-              <table class="table musique ctn-musique table-profil">
-                <thead>
-                  <tr class="disabled-tr">
-                    <th class="index-th">#</th>
-                    <th class="favoris-th"></th>
-                    <th class="action-music"></th>
-                    <th>Titre</th>
-                    <th>Artiste</th>
-                    <th>Genre</th>
-                    <th>Année</th>
-                    <th class="last-th">Actions</th>
-                  </tr>
-                  <tbody>
-    
-                    <tr>
-                      <th>1</th>
-                      <th><% if FavoriteSong.exists?(user_id: current_user, song_id: @song.id)%>
-                        <%= link_to image_tag('like_red.png'), '#', class: "action-zik favorite", data: {:song => @song.id} %>
-                        <% else %>
-                        <%= link_to image_tag('like.png'), '#', class: "action-zik favorite", data: {:song => @song.id} %>
-                        <% end %></th>
-                      <th class="th-music">
-                        <%= image_tag('play-button.png', class: "play-music", :data => { :music => @song.file.url}) %>
-                      </th>
-                      <th><%= link_to "#{@song.title}", song_path(@song) %></th>
-                      
-                      <th><%= "#{@song.artist}" %></th>
-                      <th><%= "#{@song.genre}" %></th>
-                      <th><%= @song.year %></th>
-
-                      <th class="th-action">
-                        <a data-song="<%= @song.id %>" data-toggle="modal" data-target="#exampleModalLong" class="action-zik"><%= image_tag('playlist.png') %></a>
-                        <a href="<%= @song.file.url %>" class="action-zik" download><%= image_tag('download-arrow.png') %></a>
-                        <%= link_to image_tag('new-file.png'), edit_song_path(@song) ,class: "action-zik" %>
-                        <%= link_to image_tag('delete-button.png'), @song, class: "action-zik", method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cette musique ?' } %>
-                      </th>
-                    </tr>
-                  <!-- each -->
-                  </tbody>
-                </thead>
-              </table>
+              <%= render partial: "shared/songs_list", locals: {songs: [@song], playlist: false} %>
               <span class="playlist-assoc">PLAYLIST(S) ASSOCIÉE(S)</span>
 
               <div class="table ctn-playlist table-profil">
