--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -27,26 +27,6 @@
 
         
         </div>
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                ...
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="container-fluid">
           <!-- <%= image_tag('zikror.png', class: "bg-content") %> -->
           <div class="row">
@@ -82,46 +62,5 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript">
-
-    if(localStorage.getItem('hide') === 'true'){
-        menuToggle();
-    }
-
-    $('.menu-profil').click(function(){
-        localStorage.setItem('hide', true);
-        menuToggle();
-    });
-
-    $(document).on('click', '.parcourir-sidebar', function(){
-      $('.my-profil-sidebar').css('display','none');
-      $('.list-all-profil').css('display','block');
-
-      $('.parcourir-sidebar').addClass('active-li-sidebar');
-      $('.profil-sidebar').removeClass('active-li-sidebar');
-    });
-
-    $(document).on('click', '.profil-sidebar', function(){
-      $('.my-profil-sidebar').css('display','block');
-      $('.list-all-profil').css('display','none');
-        
-      $('.parcourir-sidebar').removeClass('active-li-sidebar');
-      $('.profil-sidebar').addClass('active-li-sidebar');
-      
-      $('.bloc-bottom').scrollTop(0);
-      $('.bloc-bottom').perfectScrollbar('update');
-    });
-
-    $('.content-page').perfectScrollbar(); 
-    $('.profil-side').perfectScrollbar(); 
-    $('.sidebar').perfectScrollbar();
-    $('.bloc-bottom').perfectScrollbar();
-
-    function menuToggle(){
-      $('.profil-side').toggle();
-      $('.content-page').toggleClass('clicked');
-      $('.nav-profil').toggleClass('clicked');
-      $('.close-img').toggleClass('clicked');
-      $('.show-img').toggleClass('clicked');
-    }
-  </script>
+  
+  <%= render partial: "shared/script" %>
