--- a/app/views/shared/_songs_list.html.erb
+++ b/app/views/shared/_songs_list.html.erb
@@ -47,3 +47,27 @@
 		</tbody>
 	</thead>
 </table>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h4 class="modal-title" id="exampleModalLongTitle">Ajouter à une playlist</h4>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<p>Choisissez une playlist:</p>
+				<%= form_tag("/add_song", method: "post", id: "add_song") do %>
+				<%= select_tag(:playlist_id, options_for_select(current_user.playlists.collect{|p| [p.name, p.id]}))%>
+				<button type="submit">AJOUTER</button>
+				<% end %>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">ANNULER</button>
+			</div>
+		</div>
+	</div>
+</div>
