--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,19 +2,12 @@
 		<!-- Sidebar -->
 		<div class="row">
 			<%= render partial: "shared/sidebar" %>
-
 			<div class="page-content">
 				<div class="head">
-					<div class="audio">
-						<% if @user.songs.size > 0 %>
-							<audio id="mejs" src="<%= @user.songs.first.file.url %>" class="mejs__player"></audio>
-						<% end %>
-					</div>
-					<h1 class="title-head"><%= correct_user? ? "PROFIL" : "PROFIL DE #{@user.username}" %></h1>
+					<%= render partial: "shared/player", locals: {songs: @user.songs} %>
+					<h1 class="title-head"><%= @user == current_user ? "MON PROFIL" : "PROFIL DE #{@user.username}" %></h1>
 					<div class="avatar">
-						<figure style="background-image: url(<%= gravatar_src(current_user) %>); background-size: cover;">
-							
-						</figure>
+						<figure style="background-image: url(<%= gravatar_src(current_user) %>); background-size: cover;"></figure>
 						<span><%= link_to current_user.username, user_path(current_user) %></span>
 					</div>
 					<%= render partial: 'shared/song_search' %>
