--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,17 +2,12 @@
     <!-- Sidebar -->
     <div class="row">
       <%= render partial: "shared/sidebar" %>
-
       <div class="page-content">
         <div class="head">
-          <div class="audio">
-              <audio id="mejs" src="<%= @song.file.url %>" class="mejs__player"></audio>
-          </div>
-          <h1 class="title-head">MUSIQUE</h1>
+          <%= render partial: "shared/player", locals: {songs: [@song]} %>
+          <h1 class="title-head"><%= @song.user == current_user ? "MA MUSIQUE" : "MUSIQUE DE #{@song.user.username}" %></h1>
           <div class="avatar">
-            <figure style="background-image: url(<%= gravatar_src(current_user) %>); background-size: cover;">
-              
-            </figure>
+            <figure style="background-image: url(<%= gravatar_src(current_user) %>); background-size: cover;"></figure>
             <span><%= link_to current_user.username, user_path(current_user) %></span>
           </div>
           <%= render partial: 'shared/song_search' %>
