--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -7,10 +7,7 @@
 		<div class="head">
 			<%= render partial: "shared/player", locals: {songs: @playlist.songs} %>
 			<h1 class="title-head"><%= @playlist.user == current_user ? "MA PLAYLIST" : "PLAYLIST DE #{@playlist.user.username}" %></h1>
-			<div class="avatar">
-				<figure style="background-image: url(<%= gravatar_src(current_user) %>); background-size: cover;"></figure>
-				<span><%= link_to current_user.username, user_path(current_user) %></span>
-			</div>
+			<%= render partial: "shared/user_badge" %>
 			<%= form_tag('/playlists', method: 'get', class: "form-search form-search-musique") do %>
 			<div class="form-group">
 			  <%= search_field_tag(:playlist_name, params[:playlist_name] || '', list: 'datas', placeholder: "Rechercher une playlist") %>
