--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,3 @@
-
-
 <%= render 'shared/error_messages' %>
 
 <div class="container">
@@ -8,13 +6,7 @@
 			<div class="page-content-edit">
 				<div class="head-edit">
 					<h1 class="title-head-admin">ADMINISTRATION</h1>
-
-					<div class="avatar avatar-edit">
-						<figure style="background-image: url(<%= gravatar_src(@user) %>); background-size: cover;">
-							
-						</figure>
-						<span><%= @user.username %></span>
-					</div>
+					<%= render partial: "shared/user_badge", locals: {edit: true} %>
 					<div class="deconnect-edit">
 						<%= image_tag('logout.png') %>
 						<span><a href="">Deconnexion</a></span>
