--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -304,7 +304,7 @@ a:hover{
 .nav-profil{
 	margin: 0px;
 	position: relative;
-	top: 200px;
+	top: 185px;
 	background-color: #161616;
 	width: calc(100% - 300px);
 	height: 65px;
@@ -664,6 +664,22 @@ tr img, .action-music{
 
 .li-playlist{
 	border: 0px !important;
+}
+
+.nav-profil.nav-tabs {
+	border-bottom: none;
+	li a {
+		color: #d1d1d1;
+	}
+	li.active a, li a:hover {
+		font-style: bold;
+		color: #fff;
+		background-color: #e20b42;
+		border-color: #000;
+	}
+	li:last-of-type {
+		border-right: none;
+	}
 }
 
 .list-playlist{
