--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,13 +12,37 @@
 				</div>
 				<div class="container-fluid">
 					<div class="row">
-						<ul class="nav-profil">
+						<ul class="nav-profil nav nav-tabs">
+							<li class="active"><a data-toggle="tab" href="#songs">MUSIQUES</a></li>
+							<li><a data-toggle="tab" href="#playlists">PLAYLISTS</a></li>
 							<div class="menu-profil">
 								<%= image_tag('menu-show.png', class: "show-img", style:"display:none;") %>
 								<%= image_tag('multiply.png', class: "close-img") %>
 							</div>
 						</ul>
-						<div class="col-lg-9 col-md-8 content-page">
+						<div class="col-lg-9 col-md-8 content-page tab-content">
+								<!-- Songs tab content -->
+								<div id="songs" class="tab-pane fade in active">
+									<% unless @user.songs.empty? %>
+										<%= render partial: "shared/songs_list", locals: {songs: @user.songs, playlist: false} %>
+									<% else %>
+										<%= @user.username %> n'a pas encore ajouté de musiques.
+									<% end %>
+								</div>
+								<!-- playlist tab content -->
+								<div id="playlists" class="tab-pane fade">
+									<% @user.playlists.each do |playlist| %>
+										<div class="divider-block-playlist" <% unless playlist.image_file_name.nil? %> style="background: rgb(65, 65, 65) url(<%= playlist.image.url %>) no-repeat 200% center / cover;" <% end %>>
+											<a href="<%= playlist_path(playlist) %>">
+												<div class="circle" <% unless playlist.image_file_name.nil? %>style="border:none;"<% end %>>
+													<%= image_tag('search.png') %>
+												</div>
+											</a>
+											<span><%= link_to playlist.name, playlist_path(playlist) %></span><br>
+											<span class="nbr-title"><%= pluralize(playlist.songs.size, 'titre') %></span>
+										</div>
+									<% end %>
+								</div>
 						</div>
 						<div class="profil-side col-lg-3 col-md-4">
 							<%= render partial: "shared/right_sidebar", locals: {user: @user} %>
