--- a/app/views/shared/_player.html.erb
+++ b/app/views/shared/_player.html.erb
@@ -1,5 +1,5 @@
 <div class="audio">
 	<% unless songs.empty? %>
-		<audio id="mejs" src="plop.mp3" class="mejs__player"></audio>
+		<audio id="mejs" src="/PETIT_BISCUIT_Sunset_Lover.mp3" class="mejs__player"></audio>
 	<% end %>
 </div>
